--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-sdk android:minSdkVersion="11" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,24 +13,32 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name=".AuthActivities.RegisterActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/title_activity_register"
+            android:parentActivityName=".AuthActivities.LoginActivity" >
+        </activity>
+        <activity
+            android:name=".AuthActivities.LoginActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".MenuActivitiesTest.MenuActivity"
+            android:label="@string/title_activity_cadastro"
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".MenuFragments.MainActivity"
+            android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".RegisterActivity"
-            android:label="@string/title_activity_register"
-            android:excludeFromRecents="true"
-            android:parentActivityName=".MainActivity">
-
-        </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:excludeFromRecents="true"
-            >
         </activity>
     </application>
 
